Move demo files to a shared `demo` folder

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<link rel="stylesheet" type="text/css" href="material-depth.css" />
 		<link rel="stylesheet" type="text/css" href="material-dark.css" media="(prefers-color-scheme: dark)" id="dark-theme-import" />
 		
-		<link rel="stylesheet" type="text/css" href="demo_fonts/roboto.css" />
+		<link rel="stylesheet" type="text/css" href="demo/fonts/roboto.css" />
 		
 		<style type="text/css">
 			code {
@@ -167,13 +167,13 @@
 		<header role="toolbar" class="appBar z2">
 			<span style="float: right;">
 				<button title="Action 1">
-					<img src="demo_icons/appbar1.png" alt="Action 1" />
+					<img src="demo/icons/appbar1.png" alt="Action 1" />
 				</button>
 				<button title="Action 2">
-					<img src="demo_icons/appbar2.png" alt="Action 2" />
+					<img src="demo/icons/appbar2.png" alt="Action 2" />
 				</button>
 				<button title="Action 3">
-					<img src="demo_icons/appbar3.svg" alt="Action 3" />
+					<img src="demo/icons/appbar3.svg" alt="Action 3" />
 				</button>
 				<button title="Button 4">
 					Action 4
@@ -442,13 +442,13 @@
 			<div class="col">
 				<div role="toolbar">
 					<button title="Action 1">
-						<img src="demo_icons/toolbar1.png" alt="Action 1" />
+						<img src="demo/icons/toolbar1.png" alt="Action 1" />
 					</button>
 					<button title="Action 2">
-						<img src="demo_icons/toolbar2.png" alt="Action 2" />
+						<img src="demo/icons/toolbar2.png" alt="Action 2" />
 					</button>
 					<button title="Action 3">
-						<img src="demo_icons/toolbar3.svg" alt="Action 3" />
+						<img src="demo/icons/toolbar3.svg" alt="Action 3" />
 					</button>
 					<button title="Action 4">
 						Action 4
