--- a/index.html
+++ b/index.html
@@ -59,16 +59,17 @@
 			
 			.category-header,
 			.section {
-				margin: 0 auto;
+				margin-left: auto;
+				margin-right: auto;
 				max-width: 1200px;
 			}
-				.section {
+				.category-header {
 					margin-top: 8px;
 					margin-bottom: 8px;
 				}
-					.section h2 {
-						margin-top: 0;
-					}
+				.section h2 {
+					margin-top: 0;
+				}
 			
 			.col {
 				-webkit-box-sizing: border-box;
@@ -248,7 +249,7 @@
 			<p>Adding the <code>material-elements.css</code> style sheet will automatically style the following elements.  That style sheet works based on standard HTML elements and attributes, so it can work without adding additional classes other frameworks without CSS classes clashing.</p>
 		</header>
 		<a name="headings"></a>
-		<section class="section card z1">
+		<section class="section card full-width z1">
 			<h2>Headings</h2>
 			<p>The top three levels of headings have been styled according to the heading, title, and subhead styles in the <a href="http://www.google.com/design/spec/style/typography.html#typography-styles" target="_blank">Material Design guidelines</a>.</p>
 			<div class="col">
@@ -265,7 +266,7 @@
 			</code>
 		</section>
 		<a name="kbd"></a>
-		<section class="section card z1">
+		<section class="section card full-width z1">
 			<h2>Keyboard shortcuts</h2>
 			<p>While there is no official design spec, the <code>&lt;kbd&gt;</code> element has formatting similar to keyboard hints in some of Google's Material Design apps.</p>
 			<div class="col">
@@ -276,12 +277,12 @@
 			</code>
 		</section>
 		<a name="buttons"></a>
-		<section class="section card z1">
+		<section class="section card full-width z1">
 			<h2>Buttons</h2>
 			<!--[if lt IE 9]>
 				<p>
 					(Older IE has a bug with raised element inside of raised elements, so you need to toggle the elevation of this section to see the raised buttons.
-					<button onclick="parentElement.parentElement.className = (parentElement.parentElement.className === 'section card z1' ? 'section card' : 'section card z1');">
+					<button onclick="parentElement.parentElement.className = (parentElement.parentElement.className === 'section card full-width z1' ? 'section card full-width' : 'section card full-width z1');">
 						Toggle
 					</button>)
 				</p>
@@ -322,7 +323,7 @@
 			</code>
 		</section>
 		<a name="radios"></a>
-		<section class="section card z1">
+		<section class="section card full-width z1">
 			<h2>Radio buttons</h2>
 			<p>An <code>&lt;input type="radio" /&gt;</code> will be styled and animated as a paper radio button.  (Note this is only fully supported in WebKit- and Blink-based browsers, such as Chrome and Safari.)</p>
 			<div class="col">
@@ -342,7 +343,7 @@
 			</code>
 		</section>
 		<a name="checkboxes"></a>
-		<section class="section card z1">
+		<section class="section card full-width z1">
 			<h2>Checkboxes</h2>
 			<p>An <code>&lt;input type="checkbox" /&gt;</code> will be styled and animated as a paper checkbox.  (Note this is only fully supported in WebKit- and Blink-based browsers, such as Chrome and Safari.)</p>
 			<div class="col">
@@ -362,7 +363,7 @@
 			</code>
 		</section>
 		<a name="selects"></a>
-		<section class="section card z1">
+		<section class="section card full-width z1">
 			<h2>Drop-down menus</h2>
 			<p>A simple <code>&lt;select&gt;</code> element will be styled as a paper drop-down menu.</p>
 			<div class="col">
@@ -391,7 +392,7 @@
 			</code>
 		</section>
 		<a name="textfields"></a>
-		<section class="section card z1">
+		<section class="section card full-width z1">
 			<h2>Text fields</h2>
 			<p>Any <code>&lt;input /&gt;</code> with <code>type</code> set to <code>search</code>, <code>password</code>, <code>email</code>, <code>url</code>, or <code>number</code> will be styled as a paper text field.</p>
 			<div class="col">
@@ -402,7 +403,7 @@
 			</code>
 		</section>
 		<a name="sliders"></a>
-		<section class="section card z1">
+		<section class="section card full-width z1">
 			<h2>Sliders</h2>
 			<p>Any <code>&lt;input type="range" /&gt;</code> will be styled as a paper slider.</p>
 			<div class="col">
@@ -416,7 +417,7 @@
 			</code>
 		</section>
 		<a name="progress"></a>
-		<section class="section card z1">
+		<section class="section card full-width z1">
 			<h2>Progress bars</h2>
 			<p>Any <code>&lt;progress&gt;</code> element will be styled as a paper progress bar.</p>
 			<div class="col">
@@ -433,7 +434,7 @@
 			<p>Adding the <code>material-widgets.css</code> style sheet will allow the following widgets to be added.</p>
 		</header>
 		<a name="lists"></a>
-		<section class="section card z1">
+		<section class="section card full-width z1">
 			<h2>Lists</h2>
 			<p>An <code>&lt;ol&gt;</code> or <code>&lt;ul&gt;</code> with the <code>list</code> class will have its list items and buttons styled.</p>
 			<div class="col">
@@ -459,7 +460,7 @@
 			</code>
 		</section>
 		<a name="toolbars"></a>
-		<section class="section card z1">
+		<section class="section card full-width z1">
 			<h2>Toolbars</h2>
 			<p>An element with <code>role="toolbar"</code> will have its buttons styled as paper toolbar buttons.  Icons will be resized to 24px, so SVGs and 2x PNGs may be used.</p>
 			<div class="col">
@@ -509,7 +510,7 @@
 			</code>
 		</section>
 		<a name="appbars"></a>
-		<section class="section card z1">
+		<section class="section card full-width z1">
 			<h2>App bars</h2>
 			<p>An element (usually a <code>&lt;header&gt;</code>) with the <code>appBar</code> class will be styled as an app bar&mdash;fixed to the top of the page, and set to be 64px tall on larger screens and 56px tall on smaller screens.  An app bar can be a toolbar as well by adding <code>role="toolbar"</code>.  A depth class can be added to visually raise button the app bar above other content (see <a href="#depth">Depth</a> below).</p>
 			<div class="col">
@@ -553,9 +554,9 @@
 			</code>
 		</section>
 		<a name="cards"></a>
-		<section class="section card z1">
+		<section class="section card full-width z1">
 			<h2>Cards</h2>
-			<p>An element with the <code>card</code> class will be styled as a paper card.  Add a <a href="#depth">depth</a> class to determine how high to visually raise the card.  (Each of these sections is a <code>&lt;section class="card"&gt;</code>.)</p>
+			<p>An element with the <code>card</code> class will be styled as a paper card.  Add a <a href="#depth">depth</a> class to determine how high to visually raise the card.  A <code>card</code> with the <code>full-width</code> class as well will have &ldquo;auto&rdquo; left and right margins, and will fill the entire window width in narrow windows.  (Each of these sections is a <code>&lt;section class="card full-width z1"&gt;</code>.)</p>
 			<div class="col">
 				<div class="card z1" style="width: 192px; height: 192px;"></div>
 			</div>
@@ -564,7 +565,7 @@
 			</code>
 		</section>
 		<a name="circularprogress"></a>
-		<section class="section card z1">
+		<section class="section card full-width z1">
 			<h2>Circular progress indicators</h2>
 			<p>A progress (or <code>role="progress"</code>) element with the <code>circular</code> class will be styled as a circular progress indicator. Change the <code>color</code> to change the color of the spinner.</p>
 			<div class="col">
@@ -581,7 +582,7 @@
 			</code>
 		</section>
 		<a name="switches"></a>
-		<section class="section card z1">
+		<section class="section card full-width z1">
 			<h2>Toggle switches</h2>
 			<p>A checkbox with the <code>switch</code> class will be styled as a toggle switch.  When toggled on, the switch will be the current <code>color</code>.</p>
 			<div class="col">
@@ -618,7 +619,7 @@
 			<h1>Depth</h1>
 			<p>Adding the <code>material-depth.css</code> style sheet enables depth classes <code>z1</code> through <code>z5</code>, which add shadows to elements.</p>
 		</header>
-		<section class="section card z1">
+		<section class="section card full-width z1">
 			<h2>Depth classes</h2>
 			<p>An element with any of the five z-depth classes will have a shadow applied to it.  A <a href="#buttons">button</a> with a depth class applied will function as a raised button.  A <a href="#cards">card</a> with a depth class applied will also be lightened as appropriate for its elevation in <a href="#darktheme">dark theme</a>.</p>
 			<div class="col">
@@ -684,7 +685,7 @@
 			<h1>Dark theme</h1>
 			<p>Adding the <code>material-dark.css</code> style sheet overrides the default (light) Material styles to standard Material dark theme.</p>
 		</header>
-		<section class="section card z1">
+		<section class="section card full-width z1">
 			<h2>Dark theme setting</h2>
 			<p>The easiest way to let the user choose a theme is to add a <code>(prefers-color-scheme: dark)</code> media query to the import, which will automatically load it if the user's system theme is set to dark.  (This page does that.)  At time of writing, this is supported on the latest versions of all major browsers on the latest versions of Android, iOS, MacOS, and Windows.</p>
 			<code style="display: block;">
@@ -703,7 +704,7 @@
 			<h1>Accent color</h1>
 			<p>If you only need to support browsers that support CSS custom properties, you can specify a single accent color.</p>
 		</header>
-		<section class="section card z1">
+		<section class="section card full-width z1">
 			<h2>Accent color property</h2>
 			<p>Instead of individually overriding the colors of elements, set the <code>--mz-accent-color</code> property.  Do keep in mind older browsers will ignore your custom property.</p>
 			<!--<iframe src="demo/accent_color.html" class="col"><a href="demo/accent_color.html">Demo</a></iframe>-->
