Add note about changing the accent color in older browsers to demo page

--- a/index.html
+++ b/index.html
@@ -756,6 +756,9 @@
 					<input type="color" id="accent-color-picker" value="#f44336" />
 				</label>
 			</div>
+			<br />
+			<br />
+			<small>If you want to customize the accent color in <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/--*#browser_compatibility" target="_blank">browsers that do not support CSS custom properties&#x2b77;</a>, you can find/replace &ldquo;#40c4ff&rdquo; in the MaterialZ CSS files to change the accent color.</small>
 		</section>
 		<footer>
 			<p>
