--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="manifest.appcache">
+<html>
 	<head>
 		<title>MaterialZ</title>
 		<meta name="description" content="MaterialZ is a CSS library created by Zachary Yaro that offers a lightweight implementation of the Material Design spec." />
@@ -181,6 +181,24 @@
 			function handleAccentColorChange(ev) {
 				accentColorDemo.style.setProperty('--mz-accent-color', ev.currentTarget.value);
 				accentColorHex.innerText = ev.currentTarget.value;
+			}
+			
+			// Set up offline caching.
+			if (!!navigator.serviceWorker) {
+				navigator.serviceWorker.register('service_worker.js').then(function (registration) {
+					console.log('Registered service worker with scope:', registration.scope);
+				});
+			} else {
+				// If service worker is unavailable, fall back to app cache.
+				document.addEventListener('DOMContentLoaded', function () {
+					var appCacheIFrame = document.createElement('iframe');
+					appCacheIFrame.src = 'app_cacher.html';
+					appCacheIFrame.style.position = 'absolute';
+					appCacheIFrame.style.width = '1px';
+					appCacheIFrame.style.height = '1px';
+					appCacheIFrame.style.border = '0 none';
+					document.body.appendChild(appCacheIFrame);
+				});
 			}
 		</script>
 		
