--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 		<meta name="theme-color" content="#263238" />
 		
-		<link rel="shortcut icon" type="image/x-icon" href="icon/favicon.ico" />
-		<link rel="icon" sizes="192x192" href="icon/icon_192.png" />
-		<link rel="apple-touch-icon-precomposed" sizes="192x192" href="icon/icon_192.png" />
+		<link rel="shortcut icon" type="image/x-icon" href="logo/favicon.ico" />
+		<link rel="icon" sizes="192x192" href="logo/icon_192.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="192x192" href="logo/icon_192.png" />
 		
 		<link rel="stylesheet" type="text/css" href="material-elements.css" />
 		<link rel="stylesheet" type="text/css" href="material-widgets.css" />
