Add note about date/time fields to demo page

--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
 		<a name="textfields"></a>
 		<section class="section card full-width z1">
 			<h2>Text fields</h2>
-			<p>Any <code>&lt;input /&gt;</code> with <code>type</code> set to <code>search</code>, <code>password</code>, <code>email</code>, <code>url</code>, or <code>number</code> will be styled as a paper text field.</p>
+			<p>Any <code>&lt;input /&gt;</code> with <code>type</code> set to <code>search</code>, <code>password</code>, <code>email</code>, <code>url</code>, <code>tel</code> or <code>number</code> will be styled as a paper text field.  Date/time pickers <code>date</code>, <code>datetime-local</code>, <code>month</code>, <code>time</code>, or <code>week</code> will as well.</p>
 			<div class="col">
 				<input type="text" placeholder="Text field" />
 				<br />
